Fix bug where controls were still enabled while video player was playing on mobile.

--- a/styles/style.css
+++ b/styles/style.css
@@ -1729,11 +1729,15 @@ file. These definitions will be defined mobile first.
 }
 
 .video-player--playing .video-player__playback-btn-mobile {
+    left: -10000px;
     opacity: 0;
+    transition: opacity 0.25s, left 0s 0.25s;
 }
 
 .video-player--playing .video-player__playback-btn-mobile--show {
+    left: 0px;
     opacity: 1;
+    transition: opacity 0.25s;
 }
 
 .video-player__playback-btn-mobile-icon {
@@ -1766,6 +1770,13 @@ file. These definitions will be defined mobile first.
     opacity: 0;
 }
 
+@media (max-width: 900px) {
+    .video-player--playing .video-player__controls-container {
+        transform: translateY(100%);
+        transition: opacity 0.25s, transform 0s 0.25s;
+    }
+}
+
 @media (min-width: 900px) {
     .video-player--playing:hover .video-player__controls-container {
         opacity: 1;
@@ -1774,6 +1785,8 @@ file. These definitions will be defined mobile first.
 
 .video-player--playing .video-player__controls-container--show {
     opacity: 1;
+    transform: none;
+    transition: opacity 0.25s;
 }
 
 .video-player__top-controls-container {
